JDK-8325520: add store tests